
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- Image Left Button -->
                <Button
                    android:id="@+id/imageLeft_add"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/baseline_arrow_circle_left_24" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!-- Image Right Button -->
                <Button
                    android:id="@+id/imageRight_add"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/baseline_arrow_circle_right_24" />
            </LinearLayout>

            <!-- Image View -->
            <ImageView
                android:id="@+id/imageViewItem"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="20dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:srcCompat="@drawable/default_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!-- Camera Button -->
                <Button
                    android:id="@+id/cameraButton_add"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/baseline_photo_camera_24"/>

                <!-- Select Image Button -->
                <Button
                    android:id="@+id/selectImageButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/baseline_image_search_24" />

                <!-- Delete Image Button -->
                <Button
                    android:id="@+id/deleteImageButton_add"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/baseline_delete_outline_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <!-- Item Name -->
                <EditText
                    android:id="@+id/itemName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/specifications"
                    android:hint="Item Name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#6C6767"
                    android:textColorHint="#6C6767"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/scanBarcodeButton"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:background="@drawable/img_2" />
            </LinearLayout>

            <EditText
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/specifications"
                android:gravity="top|left"
                android:hint="Description"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textColor="#6C6767"
                android:textColorHint="#6C6767"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <!-- Date of Purchase -->
                <EditText
                    android:id="@+id/dateText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:hint="Date"
                    android:background="@drawable/specifications"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#7E7979"
                    android:textColorHint="#6C6767"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/itemDate"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:background="@drawable/baseline_calendar_month_24"
                    android:textColor="#7E7979"
                    android:textSize="18sp"
                    android:textStyle="bold" />




                <!-- Value -->
                <EditText
                    android:id="@+id/itemValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Value"
                    android:background="@drawable/specifications"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textColor="#7E7979"
                    android:textColorHint="#6C6767"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Serial Number and Scan Button in one line -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- Serial Number -->
                <EditText
                    android:id="@+id/itemSerialNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Serial Number"
                    android:background="@drawable/specifications"
                    android:padding="10dp"
                    android:textColor="#7E7979"
                    android:textColorHint="#6C6767"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Scan Serial Number Button -->
                <Button
                    android:id="@+id/scanSerialButton"
                    android:layout_width="50dp"
                    android:background="@drawable/baseline_qr_code_scanner_24"
                    android:layout_height="50dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- Make -->
                <EditText
                    android:id="@+id/itemMake"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:hint="Make"
                    android:background="@drawable/specifications"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#7E7979"
                    android:textColorHint="#6C6767"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Model -->
                <EditText
                    android:id="@+id/itemModel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Model"
                    android:background="@drawable/specifications"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#7E7979"
                    android:textColorHint="#6C6767"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Comment -->
            <EditText
                android:id="@+id/itemComment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:hint="Comment"
                android:background="@drawable/specifications"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textColor="#7E7979"
                android:textColorHint="#6C6767"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="8dp">

                <!-- Add Tags Text -->
                <TextView
                    android:id="@+id/addTagsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add tags"
                    android:textColor="#7E7979"
                    android:textColorHint="#6C6767"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addTagsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/baseline_add_circle_24"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:tint="@color/white"
                    app:backgroundTint="#294B58"

                    android:clickable="true"
                    app:srcCompat="@android:drawable/ic_input_add" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addItemButton"
        android:layout_width="92dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="12dp"
        app:backgroundTint="#294B58"
        app:srcCompat="@android:drawable/checkbox_on_background" />

</RelativeLayout>