<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="25dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp"
        android:background="@drawable/specifications">
    </androidx.cardview.widget.CardView>




    <LinearLayout
        android:id="@+id/userProfileBar"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@drawable/total">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.6"
            android:text="Total Estimate Value:"
            android:id="@+id/test"
            android:textColor="#FFFFFF"
            android:textSize="28dp"
            android:typeface="normal"
            />

        <TextView
            android:id="@+id/totalValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/tagBar"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfileBar"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tag_View"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#37756F"
            app:tint="#FFFFFF"
            app:srcCompat="@android:drawable/ic_input_add" />



        <ImageButton
            android:id="@+id/sortItem_btn"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:background="@null"
            android:layout_gravity="center"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/baseline_filter_alt_24"
            />
        <ImageButton
            android:id="@+id/searchItem_btn"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:background="@null"
            android:layout_gravity="center"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/baseline_sort_24"
            />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/valueAndButtonContainer"
        android:layout_below="@id/tagBar"
        android:padding="16dp" />

    <LinearLayout
        android:id="@+id/valueAndButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="16dp">
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        app:backgroundTint="#37756F"
        app:tint="#FFFFFF"
        android:layout_marginBottom="17dp"
        app:srcCompat="@android:drawable/ic_input_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="165dp"
        android:clickable="true"
        app:backgroundTint="#37756F"
        app:tint="#FFFFFF"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="17dp"
        android:clickable="true"
        app:backgroundTint="#37756F"
        app:tint="#FFFFFF"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonDeselectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        app:backgroundTint="#37756F"
        app:tint="#FFFFFF"
        android:layout_marginBottom="91dp"
        android:clickable="true"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonTagItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:backgroundTint="#37756F"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="235dp"
        android:clickable="true"
        android:visibility="invisible"
        android:src="@android:drawable/ic_input_get" />



</RelativeLayout>



